<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/canal_background"
    tools:context=".MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="44dp"
        android:text="@string/tituloMenu"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <TextView
        style="@style/SubTituloMenu"
        android:layout_marginHorizontal="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/citas" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/SubTituloMenu"
        android:layout_marginHorizontal="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talleres" />

</androidx.appcompat.widget.LinearLayoutCompat>