<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context="es.repositoriocompartido.psicologiaapp.MainActivity">

    <TextView
        android:id="@+id/txtMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_Elementos"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="32sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/subtitulos"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHombre"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu"
        app:layout_constraintEnd_toStartOf="@+id/cvMujer"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="16dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_man"
                app:tint="@color/white"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/subtitulos"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMujer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu"
        app:layout_constraintStart_toEndOf="@+id/cvHombre"
        app:cardBackgroundColor="@color/card_color_no_selected"
        app:cardCornerRadius="16dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_woman"
                app:tint="@color/white"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/subtitulos"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/cvHijos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvHombre">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/subtitulos" />

            <TextView
                android:id="@+id/txtEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="40 años"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/subtitulos" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rngEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="18"
                android:valueTo="85"
                android:layout_margin="4dp"
                app:backgroundTint="@color/card_Elementos"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cvHijos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@+id/cvEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvMujer"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/hijos"
                android:textAllCaps="true"
                android:textColor="@color/subtitulos" />
            <TextView
                android:id="@+id/txtHijos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/subtitulos"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="2" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMenosHijos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_menos"
                    app:backgroundTint="@color/card_Elementos"
                    app:tint="@color/disminuir" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMasHijos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mas"
                    app:backgroundTint="@color/card_Elementos"
                    app:tint="@color/aumentar" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtSueldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sueldo"
        android:textColor="@color/card_Elementos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEdad"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/edtSueldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresarSueldo"
        android:textColor="@color/card_Elementos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSueldo"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/btnDescuento"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/btnDescuento"
        app:backgroundTint="@color/card_Elementos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSueldo"/>

    <Button
        android:id="@+id/btnOfertaPsicologica"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/oferta"
        app:backgroundTint="@color/card_Elementos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>